Fix letter spacing in hero

--- a/website/src/css/custom.scss
+++ b/website/src/css/custom.scss
@@ -114,6 +114,7 @@
       line-height: normal;
       margin-bottom: 40px;
       max-width: 1080px;
+      letter-spacing: -1.5px;
 
       @media only screen and (max-width: 959px) {
         font-size: 32px;
